Redes Sociales agrgadas

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
         <a href="contacto.html">Contacto</a>
     </nav>
 
+    <div>
+        <img src="imagenes/Facebook.png"  width="50">
+        <img src="imagenes/Instagram.png"  width="50">
+        <img src="imagenes/Whatsapp.png"  width="50">
+    </div>
+
     <section>
         <h2>Fotografía Profesional</h2>
     </section>
